fix jumping

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
  ::-webkit-scrollbar{
   display: none;
   visibility: hidden;
-
+  overflow: hidden;
  }
  ::-webkit-scrollbar-track{
   display: none;
@@ -13,7 +13,9 @@
     padding: 0;
     margin: 0; 
    box-sizing: border-box;
+  
     
+ 
  } 
  
  .navButton{
